--- a/linear_regression_lab.ipynb
+++ b/linear_regression_lab.ipynb
@@ -673,7 +673,7 @@
     "\n",
     "### Q5: Using only the trained model the parent now wants to make a prediction for tomorrow. Everything is going smooth so they antipicate getting a good night of sleep, or around `8.5` hours of sleep. What will their predicted level of grumpiness be tomorrow? \n",
     "\n",
-    "If the parent slept 8.5 hours, they'd be 49.99% grumpiness out of 100%. Their 'predicted' level of grumpiness would be 49.99. \n",
+    "If the parent slept 8.5 hours, they'd be 49.99% grumpiness out of 100%. By using the equation $$y = 125.956292 + -8.936756 \\times x$$, I plugged in 8.5, $$y = 125.956292 + -8.936756 \\times 8.5$$, and the result was that their 'predicted' level of grumpiness would be 49.99. \n",
     "\n",
     "***"
    ]
