--- a/linear_regression_lab.ipynb
+++ b/linear_regression_lab.ipynb
@@ -647,13 +647,20 @@
     "***\n",
     "### Q5: Suppose that the _grumpiness_ scale is between 0 and 100. How would you explain or justify the prediction the model would make if a parent did not sleep at all the night before? Or, if they slept only one hour? What does this say about the model, is it a \"good\" or \"bad\" model?\n",
     "\n",
-    "The prediction of this model is that, the more sleep a parent gets, the less grumpier they are, and vice-versa. If the parent didn't sleep the night before, they'd be more grumpy the day after, so if the parent only slept one hour, they'd be near the maximum amount of grumpiness. \n",
+    "The prediction of this model is that, the more sleep a parent gets, the less grumpier they are, and vice-versa. If the parent didn't sleep the night before, they'd be more grumpy the day after, so if the parent only slept one hour, they'd be near the maximum amount of grumpiness. If they'd sleep an hour, or less, it'd be above our 0-100 scale, which doesn't necessarily mean that the model is bad, but perhaps that the model needs to be changed to accommodate certain outliers. \n",
     "***\n",
     "\n",
     "Note that this question is related to a famous saying in Statistics, which is \"*All models are wrong, but some are useful*\". This essentially says that every model has limitations, or is incorrect in some way, but can still make sense and yield useful results when used in the appropriate setting. \n",
     "\n",
     "![image](https://miro.medium.com/v2/resize:fit:1400/1*EJZZKiXLcbp_MxRW9HJrmA.jpeg)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
